Fixed text alignment in toc

--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -45,9 +45,7 @@
       padding: 1.9rem calc(50% + 3.5vw + 24.5rem) 1.9rem 2rem;
 
       list-style: none;
-
       text-align: right;
-
 
       & button{
         padding: 1rem 0;
@@ -58,6 +56,7 @@
         color: config.$color-bg-100;
         font-size: 1.8rem;
         font-weight: bold;
+        text-align: right;
 
       }
     }
